--- a/OzUinLove/Base.lproj/Main.storyboard
+++ b/OzUinLove/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="pj2-7Q-QCC">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="OzUinLove" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +15,163 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jgM-Ib-GyR">
+                                <rect key="frame" x="147" y="78" width="307" height="244"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="244" id="aqe-Ui-LLV"/>
+                                    <constraint firstAttribute="width" constant="307" id="wxC-hy-LCC"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LDg-ZW-o15">
+                                <rect key="frame" x="424" y="378" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="idS-Wd-jqs"/>
+                                    <constraint firstAttribute="width" constant="30" id="zgo-R0-KIF"/>
+                                </constraints>
+                                <state key="normal" title="Like">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YjW-cw-WWa">
+                                <rect key="frame" x="285" y="378" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="Lgf-8o-vrW"/>
+                                    <constraint firstAttribute="height" constant="30" id="O9X-B6-5Kx"/>
+                                </constraints>
+                                <state key="normal" title="Info">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="wv2-fz-jxP" kind="show" identifier="info" id="cdm-0o-oxF"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z3w-ux-v9r">
+                                <rect key="frame" x="147" y="378" width="37" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="37" id="O8V-KU-eWR"/>
+                                    <constraint firstAttribute="height" constant="30" id="oSJ-qi-Z8U"/>
+                                </constraints>
+                                <state key="normal" title="Nope">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CyD-bS-YOi">
+                                <rect key="frame" x="207" y="423" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="YjW-cw-WWa" secondAttribute="centerY" constant="-93" id="I4H-Ik-FHM"/>
+                            <constraint firstAttribute="centerX" secondItem="jgM-Ib-GyR" secondAttribute="centerX" constant="-0.5" id="ORw-ZE-PGF"/>
+                            <constraint firstAttribute="centerY" secondItem="jgM-Ib-GyR" secondAttribute="centerY" constant="100" id="PZE-Qd-0db"/>
+                            <constraint firstAttribute="centerY" secondItem="LDg-ZW-o15" secondAttribute="centerY" constant="-93" id="Vi7-7j-CnK"/>
+                            <constraint firstAttribute="centerX" secondItem="z3w-ux-v9r" secondAttribute="centerX" constant="134.5" id="dIl-aT-m66"/>
+                            <constraint firstAttribute="centerX" secondItem="YjW-cw-WWa" secondAttribute="centerX" id="ebq-hx-Fqs"/>
+                            <constraint firstAttribute="centerY" secondItem="z3w-ux-v9r" secondAttribute="centerY" constant="-93" id="nEJ-C3-Pvv"/>
+                            <constraint firstAttribute="centerX" secondItem="LDg-ZW-o15" secondAttribute="centerX" constant="-139" id="oyT-xw-xK7"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="UbO-Rw-pxe"/>
+                    <connections>
+                        <outlet property="imageView" destination="jgM-Ib-GyR" id="gYF-XY-dCa"/>
+                        <outlet property="label" destination="CyD-bS-YOi" id="kHI-AF-XVf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="667" y="-648"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Pet-Uf-T4z">
+            <objects>
+                <navigationController id="pj2-7Q-QCC" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oeW-Cb-rgt">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="78m-uP-H2X"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="abM-eD-mlc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-48" y="-840"/>
+        </scene>
+        <!--Info View Controller-->
+        <scene sceneID="1ic-wU-0AI">
+            <objects>
+                <viewController id="wv2-fz-jxP" customClass="infoViewController" customModule="OzUinLove" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WLs-R3-6hG"/>
+                        <viewControllerLayoutGuide type="bottom" id="2rZ-NP-gsF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Uk9-MO-E8E">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Nd-BW-A5S">
+                                <rect key="frame" x="147" y="80" width="307" height="244"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="244" id="B3e-i0-5QH"/>
+                                    <constraint firstAttribute="width" constant="307" id="u3p-Mu-ihB"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qgf-1n-8Mg">
+                                <rect key="frame" x="147" y="362" width="60" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="ZW7-cn-dBP"/>
+                                    <constraint firstAttribute="width" constant="60" id="ijR-SI-hUG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ocd-r1-YkG">
+                                <rect key="frame" x="147" y="420" width="35" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="qvg-Dp-lpU"/>
+                                    <constraint firstAttribute="width" constant="35" id="uPn-PG-ETv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a51-4v-EW5">
+                                <rect key="frame" x="215" y="362" width="191" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="svX-F5-hfy">
+                                <rect key="frame" x="215" y="420" width="85" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="Qgf-1n-8Mg" secondAttribute="centerX" constant="123" id="A4u-4t-LJ6"/>
+                            <constraint firstAttribute="centerY" secondItem="Ocd-r1-YkG" secondAttribute="centerY" constant="-130.5" id="XlS-4J-NVe"/>
+                            <constraint firstAttribute="centerY" secondItem="Qgf-1n-8Mg" secondAttribute="centerY" constant="-72.5" id="YWa-Qn-5ay"/>
+                            <constraint firstAttribute="centerX" secondItem="Ocd-r1-YkG" secondAttribute="centerX" constant="135.5" id="c0u-aS-I6v"/>
+                            <constraint firstAttribute="centerX" secondItem="1Nd-BW-A5S" secondAttribute="centerX" constant="-0.5" id="dRp-s2-Te0"/>
+                            <constraint firstAttribute="centerY" secondItem="1Nd-BW-A5S" secondAttribute="centerY" constant="98" id="gSO-lS-cD6"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="ageLabel" destination="svX-F5-hfy" id="Vzv-Kn-yrS"/>
+                        <outlet property="imageView" destination="1Nd-BW-A5S" id="I8a-Jq-KXc"/>
+                        <outlet property="nameLabel" destination="a51-4v-EW5" id="sMv-g8-JBn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Y3-KI-MkZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1432" y="-557"/>
         </scene>
     </scenes>
 </document>
