--- a/OzUinLove/Base.lproj/Main.storyboard
+++ b/OzUinLove/Base.lproj/Main.storyboard
@@ -32,6 +32,9 @@
                                 <state key="normal" title="Like">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="Like" destination="vXZ-lx-hvc" eventType="touchUpInside" id="7pV-Ch-woB"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YjW-cw-WWa">
                                 <rect key="frame" x="285" y="378" width="30" height="30"/>
@@ -55,6 +58,9 @@
                                 <state key="normal" title="Nope">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="Nope" destination="vXZ-lx-hvc" eventType="touchUpInside" id="G8C-8U-Tcv"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CyD-bS-YOi">
                                 <rect key="frame" x="207" y="423" width="42" height="21"/>
