--- a/OzUinLove/Base.lproj/Main.storyboard
+++ b/OzUinLove/Base.lproj/Main.storyboard
@@ -41,6 +41,9 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="OzUinLoveLogo" translatesAutoresizingMaskIntoConstraints="NO" id="A3L-dC-MZf">
+                                <rect key="frame" x="93" y="28" width="415" height="128"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -260,4 +263,7 @@
             <point key="canvasLocation" x="1724" y="-593"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="OzUinLoveLogo" width="590" height="251"/>
+    </resources>
 </document>
